--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="article-header">
         <h1 itemprop="name">
   <a
-    class="article-title"
+    class="article-date"
     href="/posts/download-chickenauto-auto-tlbb-dragon-auth/"
     >Download ChickenAuto Auto TLBB Dragon Auth</a
   >
