--- a/404.html
+++ b/404.html
@@ -142,7 +142,7 @@
     <h3 class="widget-title">Board</h3>
     <div class="widget-body">
         <div id="board">
-            <div class="content"><p><a class="btn btn-danger" href="/posts/download/">Download Auto</a></p><br /><p><iframe src="https://www.facebook.com/plugins/page.php?href=https://www.facebook.com/ChickenAutoTLBB&tabs=timeline&width=260&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=304154630289897" height="500" style="border:none;overflow:hidden; width:100%!;(MISSING)" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></p>
+            <div class="content"><p><a class="btn btn-danger" href="/download">Download Auto</a></p><br /><p><iframe src="https://www.facebook.com/plugins/page.php?href=https://www.facebook.com/ChickenAutoTLBB&tabs=timeline&width=260&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=304154630289897" height="500" style="border:none;overflow:hidden; width:100%!;(MISSING)" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></p>
             </div>
         </div>
     </div>
