--- a/vi/index.html
+++ b/vi/index.html
@@ -203,7 +203,7 @@
       <div class="article-header">
         <h1 itemprop="name">
   <a
-    class="article-date"
+    class="article-title"
     href="/vi/posts/download-chickenauto-auto-tlbb-dragon-auth/"
     >Download ChickenAuto Auto TLBB Dragon Oath</a
   >
