--- a/download/index.html
+++ b/download/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><title>http://chickenauto.com/posts/download-chickenauto-auto-tlbb-dragon-auth/</title><link rel="canonical" href="http://chickenauto.com/posts/download-chickenauto-auto-tlbb-dragon-auth/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=http://chickenauto.com/posts/download-chickenauto-auto-tlbb-dragon-auth/" /></head></html>
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <title>/posts/download-chickenauto-auto-tlbb-dragon-auth/</title>
+    <link rel="canonical" href="/posts/download-chickenauto-auto-tlbb-dragon-auth/">
+    <meta name="robots" content="noindex">
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=/posts/download-chickenauto-auto-tlbb-dragon-auth/">
+  </head>
+</html>
